--- a/trafie/config.plist
+++ b/trafie/config.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>url</key>
-	<string>http://trafie.herokuapp.com/</string>
+	<key>ProductionUrl</key>
+	<string>https://www.trafie.com/</string>
 </dict>
 </plist>
