--- a/trafie/Info.plist
+++ b/trafie/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>NSCameraUsageDescription</key>
+  <string>Do you allow Trafie to use your camera?</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Do you allow Trafie to access your photos?</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
