--- a/trafie/Info.plist
+++ b/trafie/Info.plist
@@ -28,6 +28,26 @@
 	<string>5</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb1748731818722548</string>
+      </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>1748731818722548</string>
+  <key>FacebookDisplayName</key>
+  <string>Trafie</string>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbapi</string>
+    <string>fb-messenger-api</string>
+    <string>fbauth2</string>
+    <string>fbshareextension</string>
+  </array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
